tests/cases/errors/parser/struct_init3.vnm
struct person {
  name;
  age;
}

fn main() {
  let p = person {age: 26, name: "Hello world!"];
  return 0;
}

main();
